--- a/src/components/Grid/styles.scss
+++ b/src/components/Grid/styles.scss
@@ -5,9 +5,10 @@
 
   .grid {
     display: grid;
-    grid-template-rows: repeat(9, 1fr);
     grid-template-columns: repeat(9, 1fr);
     gap: 4px;
+    border: 4px solid #dfdfde;
+    padding: 6px;
 
     .row {
       display: grid;
@@ -21,14 +22,27 @@
         font-weight: 700;
         font-size: 1.2em;
 
+        &:disabled {
+          background-color: #394867;
+          color: #f5f5f599;
+        }
+
         &:focus {
           outline: none;
-          background-color: #30475E;
+          background-color: #30475e;
         }
 
         &.error {
-          background-color: #F05454;
+          background-color: #f05454;
           border: none;
+        }
+
+        &:nth-child(3n + 3) {
+          margin-bottom: 4px;
+        }
+
+        &:nth-child(3n + 9) {
+          margin-bottom: 0;
         }
       }
     }
